connect to database

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL='mongodb+srv://blog:WfwJLBkTTIT0hp4l@mernblog.ntr9osb.mongodb.net/?retryWrites=true&w=majority'
+DB_URL='mongodb+srv://blog:WfwJLBkTTIT0hp4l@mernblog.ntr9osb.mongodb.net/mern-blog?retryWrites=true&w=majority'
